# niji_ai_api

./: .env.example  pyproject.toml
app/: main.py
app/api/routes/: chat.py
app/core/: config.py
app/schemas/: chat.py  message.py
app/services/: ingest.py  rag_chains.py  vector_store.py
database/: env.py
database/versions/: 67b440a9f0c2_create_chats_table.py  b4af8374e227_create_messages_table.py
